# yamr

./: .dockerignore  .gitignore  Dockerfile.db  Dockerfile.importer  Dockerfile.service  README.md  db-importer-config.yml.example  docker-compose.yml  importer-config.yml.example  rest.http
.devcontainer/: .env  devcontainer.json  docker-compose.yml  init_db.sql
app/: index.html
db/: init-readings-db.sh
db-importer/: main.py  requirements.txt
helpers/data_converter/: .gitignore  README.md  pyproject.toml
helpers/data_converter/src/data_converter/: __main__.py  convert.py
service/: go.mod  go.sum  main.go
